@@ -161,6 +161,7 @@
 * Litle: Update enhanced data fields to pass integers [yunnydang] #5113
 * Litle: Update commodity code and line item total fields [yunnydang] #5115
 * Cybersource Rest: Add support for network tokens [aenand] #5107
+* Decidir: Add support for customer object [rachelkirk] #5071
 
 
 == Version 1.135.0 (August 24, 2023)
